--- a/index.html
+++ b/index.html
@@ -926,6 +926,8 @@ btnLogin.onclick = async () => {
       return;
     }
 
+ window.location.reload();
+
     // Se verificado, o restante será tratado por onAuthStateChanged
   } catch (e) {
     alert("Erro ao logar: " + e.message);
