--- a/index.html
+++ b/index.html
@@ -916,10 +916,11 @@ btnLogin.onclick = async () => {
     await user.reload(); // Atualiza o status do e-mail
 
     if (!user.emailVerified) {
-      await sendEmailVerification(user, {
-        handleCodeInApp: true,
-        url: 'https://patounic.github.io/patounic/confirmado'
-      });
+    await sendEmailVerification(user, {
+  handleCodeInApp: true,
+  url: 'https://patounic.github.io/patounic'
+});
+
 
       alert("Seu e-mail ainda não foi verificado.\nReenviamos um novo link de verificação.\nVerifique sua caixa de entrada ou spam.");
       await signOut(auth); // Impede acesso antes da verificação
