--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@ btnRegistrarConta.onclick = async () => {
     // Enviar verificação de e-mail
     await sendEmailVerification(user, {
       handleCodeInApp: true,
-      url: 'https://patounic.github.io/patounic/confirmado'
+      url: 'https://patounic.github.io/patounic'
     });
 
     // Criar entrada no Firestore com avatar vazio
