--- a/index.html
+++ b/index.html
@@ -916,7 +916,9 @@ btnLogin.onclick = async () => {
     await user.reload(); // Atualiza o status do e-mail
 
     if (!user.emailVerified) {
-await sendEmailVerification(user);
+    await sendEmailVerification(user, {
+  handleCodeInApp: true,
+  url: 'https://patounic.github.io/patounic'
 });
 
 
@@ -1003,7 +1005,9 @@ btnRegistrarConta.onclick = async () => {
     const user = userCredential.user;
 
     // Enviar verificação de e-mail
-await sendEmailVerification(user);
+    await sendEmailVerification(user, {
+      handleCodeInApp: true,
+      url: 'https://patounic.github.io/patounic'
     });
 
     // Criar entrada no Firestore com avatar vazio
