--- a/index.html
+++ b/index.html
@@ -916,11 +916,7 @@ btnLogin.onclick = async () => {
     await user.reload(); // Atualiza o status do e-mail
 
     if (!user.emailVerified) {
-    await sendEmailVerification(user, {
-  handleCodeInApp: true,
-  url: 'https://patounic.github.io/patounic'
-});
-
+      await sendEmailVerification(user); // <- REMOVIDO handleCodeInApp e url
 
       alert("Seu e-mail ainda não foi verificado.\nReenviamos um novo link de verificação.\nVerifique sua caixa de entrada ou spam.");
       await signOut(auth); // Impede acesso antes da verificação
@@ -937,6 +933,7 @@ btnLogin.onclick = async () => {
     alert("Erro ao logar: " + e.message);
   }
 };
+
 
 
 
@@ -1004,11 +1001,8 @@ btnRegistrarConta.onclick = async () => {
     const userCredential = await createUserWithEmailAndPassword(auth, email, senha);
     const user = userCredential.user;
 
-    // Enviar verificação de e-mail
-    await sendEmailVerification(user, {
-      handleCodeInApp: true,
-      url: 'https://patounic.github.io/patounic'
-    });
+    // ✅ Enviar verificação de e-mail SEM botão "Continuar"
+    await sendEmailVerification(user);
 
     // Criar entrada no Firestore com avatar vazio
     await setDoc(doc(db, "usuarios", user.uid), { avatar: "" });
@@ -1018,7 +1012,7 @@ btnRegistrarConta.onclick = async () => {
     registerContainer.style.display = "none";
     loginContainer.style.display = "flex";
   } catch (e) {
-    
+    alert("Erro ao registrar: " + e.message);
   }
 };
 
@@ -1151,10 +1145,8 @@ onAuthStateChanged(auth, async (user) => {
 
     if (!user.emailVerified) {
       try {
-        await sendEmailVerification(user, {
-          handleCodeInApp: true,
-          url: 'https://patounic.github.io/patounic/confirmado'
-        });
+        // ✅ Envia e-mail de verificação SEM botão "Continuar"
+        await sendEmailVerification(user);
         alert("Seu e-mail ainda não foi verificado.\nReenviamos o link de verificação. Verifique sua caixa de entrada ou spam.");
       } catch (error) {
         console.error("Erro ao reenviar e-mail:", error.message);
@@ -1187,6 +1179,7 @@ onAuthStateChanged(auth, async (user) => {
     inputSenha.value = "";
   }
 });
+
 
 
 
