--- a/index.html
+++ b/index.html
@@ -682,11 +682,16 @@ html, body {
 <!-- Login -->
 <div id="login-container" style="display: none;">
   <h2>Login</h2>
+
+  <!-- Aviso de erro -->
+  <div id="login-aviso" style="color: #ff6b6b; font-weight: bold; margin-bottom: 0.5rem; display: none;"></div>
+
   <input type="email" id="email" placeholder="Email" />
   <input type="password" id="senha" placeholder="Senha (mín. 6 caracteres)" />
   <button id="btn-login">Entrar</button>
   <button id="btn-registrar">Registrar</button>
 </div>
+
 
 <!-- Registro -->
 <div id="register-container" style="display: none;">
@@ -694,9 +699,31 @@ html, body {
   <input type="email" id="register-email" placeholder="Email" />
   <input type="password" id="register-senha" placeholder="Senha (mín. 6 caracteres)" />
   <input type="password" id="register-confirmar" placeholder="Confirmar senha" />
+  
+  <div id="register-aviso" style="color: #ff6b6b; font-weight: bold; margin-bottom: 0.5rem; display: none;"></div>
+
   <button id="btn-registrar-conta">Criar Conta</button>
   <button id="btn-voltar-login">Voltar ao Login</button>
 </div>
+
+<div id="verificacao-container" style="display: none; background-color: black; color: white; width: 100vw; height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem;">
+  <h2>Verifique seu e-mail 📩</h2>
+  <p>Enviamos um link de verificação para o seu e-mail.<br>Verifique sua caixa de entrada ou spam.</p>
+
+  <button id="btn-voltar-login-verificacao" style="margin-top: 1rem; background-color: #5865f2; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
+    Já me verifiquei / Voltar ao login
+  </button>
+
+  <button id="btn-reenviar-email" style="margin-top: 0.8rem; background-color: #333; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
+    Reenviar e-mail de verificação 🔁
+  </button>
+
+  <button id="btn-voltar-registro" style="margin-top: 0.8rem; background-color: #222; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
+    Corrigir e-mail / Voltar ao cadastro ✏️
+  </button>
+</div>
+
+
 
 <!-- Conteúdo principal -->
 <div id="site-content" style="display: none;">
@@ -900,42 +927,96 @@ const inputRegisterConfirmar = document.getElementById("register-confirmar");
     }
 
 
+import { fetchSignInMethodsForEmail } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
 btnLogin.onclick = async () => {
   const email = inputEmail.value.trim();
   const senha = inputSenha.value.trim();
+  const aviso = document.getElementById("login-aviso");
+  aviso.style.display = "none";
+  aviso.textContent = "";
 
   if (!email || !senha) {
-    alert("Preencha email e senha.");
+    aviso.textContent = "Preencha email e senha.";
+    aviso.style.display = "block";
     return;
   }
 
   try {
     const userCredential = await signInWithEmailAndPassword(auth, email, senha);
     const user = userCredential.user;
-
-    await user.reload(); // Atualiza o status do e-mail
+    await user.reload();
 
     if (!user.emailVerified) {
-      await sendEmailVerification(user); // <- REMOVIDO handleCodeInApp e url
+      await sendEmailVerification(user);
 
-      alert("Seu e-mail ainda não foi verificado.\nReenviamos um novo link de verificação.\nVerifique sua caixa de entrada ou spam.");
-      await signOut(auth); // Impede acesso antes da verificação
+      loginContainer.style.display = "none";
+      registerContainer.style.display = "none";
+      document.getElementById("verificacao-container").style.display = "flex";
+
+      localStorage.setItem("verificacao_enviada", "true");
+
+      await signOut(auth);
       return;
     }
 
-    // Recarrega a página uma única vez se ainda não foi recarregada
+    // Login com sucesso e email verificado
     if (!localStorage.getItem("recarregadoAposLogin")) {
       localStorage.setItem("recarregadoAposLogin", "true");
       location.reload();
     }
 
   } catch (e) {
-    alert("Erro ao logar: " + e.message);
+    // Se for erro de muitas tentativas
+    if (e.code === "auth/too-many-requests") {
+      try {
+        // Verifica se o e-mail existe
+        const methods = await fetchSignInMethodsForEmail(auth, email);
+
+        if (methods.length > 0) {
+          // E-mail existe: tenta login novamente
+          const cred = await signInWithEmailAndPassword(auth, email, senha);
+          const user = cred.user;
+          await user.reload();
+
+          if (!user.emailVerified) {
+            await sendEmailVerification(user);
+
+            loginContainer.style.display = "none";
+            registerContainer.style.display = "none";
+            document.getElementById("verificacao-container").style.display = "flex";
+
+            localStorage.setItem("verificacao_enviada", "true");
+
+            await signOut(auth);
+            return;
+          }
+        }
+
+        // E-mail existe, mas erro não é de verificação
+        aviso.textContent = "Muitas tentativas. Aguarde antes de tentar novamente.";
+      } catch (innerErr) {
+        // Se não conseguir nem checar, mostra aviso
+        aviso.textContent = "Muitas tentativas. Aguarde antes de tentar novamente.";
+      }
+    }
+
+    // Outros erros
+    else if (e.code === "auth/user-not-found") {
+      aviso.textContent = "Este e-mail não está registrado.";
+    } else if (e.code === "auth/wrong-password") {
+      aviso.textContent = "Senha incorreta.";
+    } else if (e.code === "auth/invalid-email") {
+      aviso.textContent = "Email inválido.";
+    } else if (e.code === "auth/invalid-credential") {
+      aviso.textContent = "Email ou senha incorretos.";
+    } else {
+      aviso.textContent = "Erro ao logar: " + e.message;
+    }
+
+    aviso.style.display = "block";
   }
 };
-
-
-
 
 function scrollVideos(direction = 'right', rowId = 'video-row') {
   const row = document.getElementById(rowId);
@@ -981,19 +1062,24 @@ btnRegistrarConta.onclick = async () => {
   const email = inputRegisterEmail.value.trim();
   const senha = inputRegisterSenha.value.trim();
   const confirmar = inputRegisterConfirmar.value.trim();
+  const aviso = document.getElementById("register-aviso");
+  aviso.style.display = "none";
 
   if (!email || !senha || !confirmar) {
-    alert("Preencha todos os campos.");
+    aviso.textContent = "Preencha todos os campos.";
+    aviso.style.display = "block";
     return;
   }
 
   if (senha.length < 6) {
-    alert("Senha deve ter ao menos 6 caracteres.");
+    aviso.textContent = "Senha deve ter ao menos 6 caracteres.";
+    aviso.style.display = "block";
     return;
   }
 
   if (senha !== confirmar) {
-    alert("As senhas não coincidem.");
+    aviso.textContent = "As senhas não coincidem.";
+    aviso.style.display = "block";
     return;
   }
 
@@ -1001,29 +1087,35 @@ btnRegistrarConta.onclick = async () => {
     const userCredential = await createUserWithEmailAndPassword(auth, email, senha);
     const user = userCredential.user;
 
-    // ✅ Enviar verificação de e-mail SEM botão "Continuar"
     await sendEmailVerification(user);
-
-    // Criar entrada no Firestore com avatar vazio
     await setDoc(doc(db, "usuarios", user.uid), { avatar: "" });
 
-    alert("Conta criada com sucesso! Um link de verificação foi enviado para seu email.");
-
     registerContainer.style.display = "none";
-    loginContainer.style.display = "flex";
+    document.getElementById("verificacao-container").style.display = "flex";
+
   } catch (e) {
-    alert("Erro ao registrar: " + e.message);
+    console.error("Erro ao registrar:", e.code);
+
+    if (e.code === "auth/email-already-in-use") {
+      aviso.textContent = "Este e-mail já está cadastrado. Faça login ou verifique seu e-mail.";
+    } else if (e.code === "auth/too-many-requests") {
+      aviso.textContent = "Muitas tentativas com esse e-mail. Tente novamente mais tarde.";
+    } else if (e.code === "auth/invalid-email") {
+      aviso.textContent = "E-mail inválido.";
+    } else {
+      aviso.textContent = "Erro ao registrar: " + e.message;
+    }
+
+    aviso.style.display = "block";
   }
 };
-
-
-
 
 btnVoltarLogin.onclick = () => {
   registerContainer.style.display = "none";
   loginContainer.style.display = "flex";
 };
 let menuAberto = false;
+let emVerificacao = false;
 
 
     btnLogout.onclick = async () => {
@@ -1141,45 +1233,41 @@ document.body.addEventListener("click", () => {
 
 onAuthStateChanged(auth, async (user) => {
   if (user) {
-    await user.reload(); // Garante estado atualizado
+    await user.reload();
 
-    if (!user.emailVerified) {
-      try {
-        // ✅ Envia e-mail de verificação SEM botão "Continuar"
-        await sendEmailVerification(user);
-        alert("Seu e-mail ainda não foi verificado.\nReenviamos o link de verificação. Verifique sua caixa de entrada ou spam.");
-      } catch (error) {
-        console.error("Erro ao reenviar e-mail:", error.message);
-        alert("Erro ao reenviar e-mail de verificação.");
-      }
-
-      await signOut(auth); // Desloga
-      return;
-    }
-
-    // Se email estiver verificado, carrega normalmente
-    await carregarAvatar(user.uid);
-    loadingScreen.style.display = "none";
-    loginContainer.style.display = "none";
-    siteContent.style.display = "block";
-    iconBar.style.display = "flex";
-
-    // Limpa flag de recarregamento após login verificado
-    if (localStorage.getItem("recarregadoAposLogin")) {
+    if (user.emailVerified) {
+      // ✅ Email verificado → entra no site
+      await carregarAvatar(user.uid);
+      loadingScreen.style.display = "none";
+      loginContainer.style.display = "none";
+      siteContent.style.display = "block";
+      iconBar.style.display = "flex";
       localStorage.removeItem("recarregadoAposLogin");
+    } else {
+      if (!emVerificacao) {
+        // Se não estamos vindo da verificação, mostra a tela preta
+        document.getElementById("verificacao-container").style.display = "flex";
+        loadingScreen.style.display = "none";
+        loginContainer.style.display = "none";
+        registerContainer.style.display = "none";
+        siteContent.style.display = "none";
+        iconBar.style.display = "none";
+        emVerificacao = true;
+      }
     }
-
   } else {
-    loadingScreen.style.display = "none";
-    loginContainer.style.display = "flex";
-    siteContent.style.display = "none";
-    iconBar.style.display = "none";
-    aplicarAvatar(null);
-    inputEmail.value = "";
-    inputSenha.value = "";
+    // ⚠️ Só mostra o login se não estiver na verificação
+    if (!emVerificacao) {
+      loadingScreen.style.display = "none";
+      loginContainer.style.display = "flex";
+      siteContent.style.display = "none";
+      iconBar.style.display = "none";
+      aplicarAvatar(null);
+      inputEmail.value = "";
+      inputSenha.value = "";
+    }
   }
 });
-
 
 
 
@@ -1319,6 +1407,61 @@ profileIcon.addEventListener("mouseleave", () => {
     pararRotacao();
   }
 });
+document.getElementById("btn-voltar-login-verificacao").onclick = async () => {
+  const user = auth.currentUser;
+  if (user) {
+    await user.reload();
+
+    if (user.emailVerified) {
+      // ✅ Limpa o controle de reenvio
+      localStorage.removeItem("verificacao_enviada");
+
+      // ✅ Redireciona para o conteúdo principal
+      document.getElementById("verificacao-container").style.display = "none";
+      siteContent.style.display = "block";
+      iconBar.style.display = "flex";
+      await carregarAvatar(user.uid);
+
+    } else {
+      alert("Ainda não verificamos seu e-mail. Aguarde alguns segundos após clicar no link.");
+    }
+  } else {
+    // 🔁 Usuário foi deslogado — volta para o login
+    document.getElementById("verificacao-container").style.display = "none";
+    loginContainer.style.display = "flex";
+  }
+};
+
+document.getElementById("btn-reenviar-email").onclick = async () => {
+  const user = auth.currentUser;
+  if (user) {
+    if (localStorage.getItem("verificacao_enviada") === "true") {
+      alert("Já enviamos um e-mail de verificação. Aguarde alguns minutos e verifique sua caixa de entrada ou spam.");
+      return;
+    }
+
+    try {
+      await sendEmailVerification(user);
+      localStorage.setItem("verificacao_enviada", "true"); // evita múltiplos envios
+      alert("Novo e-mail de verificação enviado com sucesso.");
+    } catch (error) {
+      console.error("Erro ao reenviar:", error.message);
+      alert("Erro ao reenviar: " + error.message);
+    }
+  } else {
+    alert("Usuário não encontrado. Faça login novamente.");
+    document.getElementById("verificacao-container").style.display = "none";
+    loginContainer.style.display = "flex";
+  }
+};
+
+const btnVoltarRegistro = document.getElementById("btn-voltar-registro");
+
+btnVoltarRegistro.onclick = () => {
+  document.getElementById("verificacao-container").style.display = "none";
+  registerContainer.style.display = "flex";
+};
+
 
 
   </script>
