--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@ html, body {
   <h2>Verifique seu e-mail 📩</h2>
   <p>Enviamos um link de verificação para o seu e-mail.<br>Verifique sua caixa de entrada ou spam.</p>
 
-<h2>Vai para caixa de spam, por contada host. 😞</h2>
+<h2>Vai para caixa de spam, por conta da host. 😞</h2>
 
   <!-- 🔴 Aviso de erro/feedback -->
   <div id="verificacao-aviso" style="color: #ff6b6b; font-weight: bold; margin-top: 0.8rem; display: none;"></div>
@@ -1228,9 +1228,10 @@ document.body.addEventListener("click", () => {
       }
     }
 
+let authReady = false;
+
 onAuthStateChanged(auth, async (user) => {
-  const verificacaoContainer = document.getElementById("verificacao-container");
-  const loadingScreen = document.getElementById("loading-screen");
+  authReady = true;
 
   if (user) {
     await user.reload();
@@ -1240,42 +1241,29 @@ onAuthStateChanged(auth, async (user) => {
       localStorage.removeItem("verificacao_enviada");
       localStorage.removeItem("recarregadoAposLogin");
 
-      // ⛔️ Oculta tudo antes de mostrar
-      verificacaoContainer.style.display = "none";
-      loginContainer.style.display = "none";
-      registerContainer.style.display = "none";
-      siteContent.style.display = "none";
-      iconBar.style.display = "none";
-
-      // ✅ Mostra o loader (mantém visível enquanto carrega avatar)
-      loadingScreen.style.display = "flex";
-
-      // 👇 Espera o avatar carregar
       await carregarAvatar(user.uid);
 
-      // ✅ Agora sim mostra o conteúdo e oculta o loader
-      siteContent.style.display = "block";
-      iconBar.style.display = "flex";
-      loadingScreen.style.display = "none";
-      document.body.style.visibility = "visible";
-
-    } else {
-      // 🔁 Tela de verificação (email não verificado)
-      emVerificacao = true;
-
-      verificacaoContainer.style.display = "flex";
-      loadingScreen.style.display = "none";
+      document.getElementById("verificacao-container").style.display = "none";
+      document.getElementById("loading-screen").style.display = "none";
       loginContainer.style.display = "none";
       registerContainer.style.display = "none";
-      siteContent.style.display = "none";
-      iconBar.style.display = "none";
-      document.body.style.visibility = "visible"; // ← Aqui também
-    }
+      siteContent.style.display = "block";
+      iconBar.style.display = "flex";
+    } else {
+      if (!emVerificacao) {
+        emVerificacao = true;
 
+        document.getElementById("verificacao-container").style.display = "flex";
+        document.getElementById("loading-screen").style.display = "none";
+        loginContainer.style.display = "none";
+        registerContainer.style.display = "none";
+        siteContent.style.display = "none";
+        iconBar.style.display = "none";
+      }
+    }
   } else {
     if (!emVerificacao) {
-      // Usuário deslogado
-      loadingScreen.style.display = "none";
+      document.getElementById("loading-screen").style.display = "none";
       loginContainer.style.display = "flex";
       registerContainer.style.display = "none";
       siteContent.style.display = "none";
@@ -1284,10 +1272,11 @@ onAuthStateChanged(auth, async (user) => {
       inputEmail.value = "";
       inputSenha.value = "";
       document.getElementById("login-aviso").style.display = "none";
-      document.body.style.visibility = "visible";
     }
   }
 });
+
+
 
 
 
@@ -1438,6 +1427,11 @@ document.getElementById("btn-voltar-login-verificacao").onclick = async () => {
   aviso.style.display = "none";
   aviso.textContent = "";
 
+  // ⏳ Aguarda o Firebase estar pronto
+  while (!authReady) {
+    await new Promise(resolve => setTimeout(resolve, 100));
+  }
+
   const user = auth.currentUser;
 
   if (user) {
@@ -1447,27 +1441,23 @@ document.getElementById("btn-voltar-login-verificacao").onclick = async () => {
       localStorage.removeItem("verificacao_enviada");
       emVerificacao = false;
 
-      // ✅ Mostra conteúdo do site
       document.getElementById("verificacao-container").style.display = "none";
       siteContent.style.display = "block";
       iconBar.style.display = "flex";
       await carregarAvatar(user.uid);
     } else {
-      // ⛔ Ainda não verificado → exibe aviso, NÃO volta pro login
       aviso.textContent = "Ainda não verificamos seu e-mail. Aguarde alguns segundos após clicar no link.";
       aviso.style.display = "block";
     }
-
   } else {
-    // ⚠️ Se usuário foi deslogado, então sim → volta para login
-    document.getElementById("verificacao-container").style.display = "none";
-    loginContainer.style.display = "flex";
-    inputEmail.value = "";
-    inputSenha.value = "";
-    document.getElementById("login-aviso").style.display = "none";
-    emVerificacao = false;
+    // 🔁 Somente volta ao login se REALMENTE não estiver logado
+    aviso.textContent = "Mano? olha a caixa de spam do e-mail";
+    aviso.style.display = "block";
   }
 };
+
+
+
 
 
 
